[build-system]
requires = ["setuptools>=61.0"] # Specifies the build tools needed
build-backend = "setuptools.build_meta"
backend-path = ["."] # Optional: if you have in-tree build backend code

[project]
name = "comtool-hrg-serial-recorder" # Choose a unique name for PyPI
version = "0.1.0" # Your plugin's version
authors = [
  { name="Lvista", email="czc_cn@outlook.com" },
]
description = "A serial port recorder plugin for COMTool for HGR data collection." # Short description
readme = "README.md" # Path to your README file
requires-python = ">=3.7" # Minimum Python version
license = { file = "LICENSE" } # Specify your license file
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License", # Example: Change to your actual license
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: PyQt",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers", # If applicable
]
keywords = ["comtool", "plugin", "serial", "recorder", "PyQt5", "HGR"] # Keywords for PyPI search

dependencies = [
    "PyQt5>=5.15", # From your imports
    # "COMTool", # IMPORTANT: If COMTool is a package on PyPI and provides `plugins.base`, `conn` etc.
    # "some-i18n-library", # If the `i18n` import is a third-party library on PyPI
]

[project.urls]
"Homepage" = "https://github.com/yourusername/your_project_name" # Example URL
"Bug Tracker" = "https://github.com/yourusername/your_project_name/issues" # Example URL

[project.entry-points."comtool.plugins"] # This is an example, COMTool needs to define this entry point group
# serial_recorder = "comtool_serial_recorder.plugin_main:Plugin" # Exposes your plugin to COMTool

[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools to find packages in the src directory